--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "「~~~」"
+description: "「me」"
 header-img: "img/post-bg-2015.jpg"
 header-mask: 0.3
 multilingual: true
