--- a/page2/index.html
+++ b/page2/index.html
@@ -244,6 +244,7 @@
     var bg='/img/bg/image_'+str+'.jpg'
     document.write('<header class="intro-header" style="background-image: url('+bg+')">')
 </script>
+<div class="header-mask" style="width: 100%; height: 100%; position: absolute; background: rgba(0,0,0, 0.1);"></div>
     <!--
     <script>
         var x=Math.floor(Math.random() * 1)
@@ -253,7 +254,6 @@
     </script>
     -->
  
-    <div class="header-mask"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -597,9 +597,9 @@ tLLWtG 的 Blog 开通了。
                 href="/archive/?tag=CP" title="CP"
                 rel="5">CP</a>
             
-            <a data-sort="0007"
+            <a data-sort="0006"
                 href="/archive/?tag=XMU" title="XMU"
-                rel="2">XMU</a>
+                rel="3">XMU</a>
     </div>
 </section>
 
