--- a/page2/index.html
+++ b/page2/index.html
@@ -558,7 +558,7 @@ tLLWtG 的 Blog 开通了。
   });
   redo.addEventListener("mouseover", (e) => {
     redo.style.cursor = "pointer";
-    redo.style.color = "rgb(100, 100, 100)";
+    redo.style.color = "#0085a1";
   });
   redo.addEventListener("mouseout", (e) => {
     redo.style.color = "#a3a3a3";
