--- a/page2/index.html
+++ b/page2/index.html
@@ -762,9 +762,9 @@ tLLWtG 的 Blog 开通了。
 </ul>
 
                 <p class="copyright text-muted">
-                    Copyright &copy; tLLWtG Blog 2023
+                    Copyright &copy; tLLWtG Blog 2022-2023
                     <br>
-                    Powered by <a href="https://github.com/Huxpro/huxpro.github.io">Huxpro</a>
+                    Based on <a href="https://github.com/Huxpro/huxpro.github.io">Huxpro</a>
                     <!--
                         <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
