Deploy commit 79733f2c6dc60113c3f1fe8dc2ae9077a40b032c
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/offline.html
+++ b/offline.html
@@ -21,8 +21,8 @@
     <meta property="og:description"
         content="阅读过的页面可以在离线时访问哦 ;)">
     
-    <meta property="og:image" content="http://localhost:4000https://avatars.githubusercontent.com/u/63890132">
-    <meta property="og:url" content="http://localhost:4000/offline.html">
+    <meta property="og:image" content="https://tllwtg.github.iohttps://avatars.githubusercontent.com/u/63890132">
+    <meta property="og:url" content="https://tllwtg.github.io/offline.html">
     <meta property="og:site_name" content="tLLWtG Blog | tLLWtG 的博客">
 
     <title>Offline - tLLWtG Blog | tLLWtG 的博客</title>
@@ -34,7 +34,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="http://localhost:4000/offline.html">
+    <link rel="canonical" href="https://tllwtg.github.io/offline.html">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href=" /css/bootstrap.min.css">
