--- a/404.html
+++ b/404.html
@@ -21,8 +21,8 @@
     <meta property="og:description"
         content="你来到了没有知识的荒原 :(">
     
-    <meta property="og:image" content="http://localhost:4000https://avatars.githubusercontent.com/u/63890132">
-    <meta property="og:url" content="http://localhost:4000/404.html">
+    <meta property="og:image" content="https://tllwtg.github.iohttps://avatars.githubusercontent.com/u/63890132">
+    <meta property="og:url" content="https://tllwtg.github.io/404.html">
     <meta property="og:site_name" content="tLLWtG Blog | tLLWtG 的博客">
 
     <title>404 - tLLWtG Blog | tLLWtG 的博客</title>
@@ -34,7 +34,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="http://localhost:4000/404.html">
+    <link rel="canonical" href="https://tllwtg.github.io/404.html">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href=" /css/bootstrap.min.css">
