--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
     gtag("config", "G-YFKQL2YEMC");
   </script>
+  <!-- add google adsense-->
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8547424531148298"
+    crossorigin="anonymous"
+  ></script>
 
   <meta
     name="viewport"
@@ -811,13 +817,11 @@ XMU ACM Advanced Class(2022)
 
 
       <!-- Ads -->
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- first shot -->
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6487568398225121" data-ad-slot="4814308751"
-     data-ad-format="auto" data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+      <script
+  async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8547424531148298"
+  crossorigin="anonymous"
+></script>
 
     </div>
     
