Deploy commit 3484eee36ce13b00c4641628633adaa73fc2dc3f
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/about/index.html
+++ b/about/index.html
@@ -54,8 +54,8 @@
     content="「me」"
   />
   
-  <meta property="og:image" content="https://tllwtg.github.iohttps://avatars.githubusercontent.com/u/63890132" />
-  <meta property="og:url" content="https://tllwtg.github.io/about/" />
+  <meta property="og:image" content="https://tllwtg.tophttps://avatars.githubusercontent.com/u/63890132" />
+  <meta property="og:url" content="https://tllwtg.top/about/" />
   <meta property="og:site_name" content="tLLWtG Blog | tLLWtG 的博客" />
 
   <title>
@@ -71,7 +71,7 @@
   <!-- Canonical URL -->
   <link
     rel="canonical"
-    href="https://tllwtg.github.io/about/"
+    href="https://tllwtg.top/about/"
   />
 
   <!-- Bootstrap Core CSS -->
@@ -572,7 +572,7 @@
 <h5><del>单向</del>友情链接</h5>
 <ul class="list-inline">
   
-  <li><a href="https://tllwtg.github.io/Hexo_Blog">tLLWtG Blog, but with Hexo</a></li>
+  <li><a href="https://tllwtg.top/Hexo_Blog">tLLWtG Blog, but with Hexo</a></li>
   
   <li><a href="https://oi.wiki">OI Wiki</a></li>
   
