--- a/offline.html
+++ b/offline.html
@@ -54,8 +54,8 @@
     content="阅读过的页面可以在离线时访问哦 ;)"
   />
   
-  <meta property="og:image" content="https://tllwtg.github.iohttps://avatars.githubusercontent.com/u/63890132" />
-  <meta property="og:url" content="https://tllwtg.github.io/offline.html" />
+  <meta property="og:image" content="https://tllwtg.tophttps://avatars.githubusercontent.com/u/63890132" />
+  <meta property="og:url" content="https://tllwtg.top/offline.html" />
   <meta property="og:site_name" content="tLLWtG Blog | tLLWtG 的博客" />
 
   <title>
@@ -71,7 +71,7 @@
   <!-- Canonical URL -->
   <link
     rel="canonical"
-    href="https://tllwtg.github.io/offline.html"
+    href="https://tllwtg.top/offline.html"
   />
 
   <!-- Bootstrap Core CSS -->
