--- a/404.html
+++ b/404.html
@@ -54,8 +54,8 @@
     content="你来到了没有知识的荒原 :("
   />
   
-  <meta property="og:image" content="https://tllwtg.github.iohttps://avatars.githubusercontent.com/u/63890132" />
-  <meta property="og:url" content="https://tllwtg.github.io/404.html" />
+  <meta property="og:image" content="https://tllwtg.tophttps://avatars.githubusercontent.com/u/63890132" />
+  <meta property="og:url" content="https://tllwtg.top/404.html" />
   <meta property="og:site_name" content="tLLWtG Blog | tLLWtG 的博客" />
 
   <title>
@@ -71,7 +71,7 @@
   <!-- Canonical URL -->
   <link
     rel="canonical"
-    href="https://tllwtg.github.io/404.html"
+    href="https://tllwtg.top/404.html"
   />
 
   <!-- Bootstrap Core CSS -->
