--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     content="「version 1.0」"
   />
   
-  <meta property="og:image" content="https://tllwtg.github.iohttps://avatars.githubusercontent.com/u/63890132" />
-  <meta property="og:url" content="https://tllwtg.github.io/" />
+  <meta property="og:image" content="https://tllwtg.tophttps://avatars.githubusercontent.com/u/63890132" />
+  <meta property="og:url" content="https://tllwtg.top/" />
   <meta property="og:site_name" content="tLLWtG Blog | tLLWtG 的博客" />
 
   <title>
@@ -71,7 +71,7 @@
   <!-- Canonical URL -->
   <link
     rel="canonical"
-    href="https://tllwtg.github.io/"
+    href="https://tllwtg.top/"
   />
 
   <!-- Bootstrap Core CSS -->
@@ -876,7 +876,7 @@ You are given an integer array coins representing coins of different denominatio
 <h5><del>单向</del>友情链接</h5>
 <ul class="list-inline">
   
-  <li><a href="https://tllwtg.github.io/Hexo_Blog">tLLWtG Blog, but with Hexo</a></li>
+  <li><a href="https://tllwtg.top/Hexo_Blog">tLLWtG Blog, but with Hexo</a></li>
   
   <li><a href="https://oi.wiki">OI Wiki</a></li>
   
