--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,7 @@
 
     gtag("config", "G-YFKQL2YEMC");
   </script>
+
   <!-- add google adsense-->
   <script
     async
@@ -311,8 +312,9 @@
 
     <!-- USE SIDEBAR -->
     <!-- PostList Container -->
-    <div class="col-lg-8 col-lg-offset-1 col-md-8 col-md-offset-1 col-sm-12
-      col-xs-12 postlist-container">
+    <div
+      class="col-lg-8 col-lg-offset-1 col-md-8 col-md-offset-1 col-sm-12 col-xs-12 postlist-container"
+    >
                       <!-- Language Selector -->
                 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
                     <option value="0" selected> 中文 | Chinese </option>
@@ -342,8 +344,9 @@
 
     </div>
     <!-- Sidebar Container -->
-    <div class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-12
-      col-xs-12 sidebar-container">
+    <div
+      class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-12 col-xs-12 sidebar-container"
+    >
       <!-- hitokoto -->
       <hr />
 <h5 style="display: inline">一言（ヒトコト）</h5>
@@ -586,16 +589,18 @@
 
 
       <!-- Ads -->
-      <script
+      <!--useless?-->
+      <!--<script
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8547424531148298"
   crossorigin="anonymous"
 ></script>
-
+-->
     </div>
     
   </div>
 </div>
+
 
 
 
