--- a/index.html
+++ b/index.html
@@ -815,6 +815,15 @@ You are given an integer array coins representing coins of different denominatio
 
 
   
+  <li>
+    <a href="/feed.xml">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  
   
   <li>
     <a href="https://twitter.com/tLLWtG1">
@@ -908,6 +917,15 @@ You are given an integer array coins representing coins of different denominatio
 <ul class="list-inline text-center">
 
 
+  
+  <li>
+    <a href="/feed.xml">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
   
   
   <li>
