--- a/page2/index.html
+++ b/page2/index.html
@@ -584,6 +584,15 @@ tLLWtG 的 Blog 开通了。
 
 
   
+  <li>
+    <a href="/feed.xml">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  
   
   <li>
     <a href="https://twitter.com/tLLWtG1">
@@ -677,6 +686,15 @@ tLLWtG 的 Blog 开通了。
 <ul class="list-inline text-center">
 
 
+  
+  <li>
+    <a href="/feed.xml">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
   
   
   <li>
