Deploy commit 56868974c1150e1fa274bf4e7528672a355c700a
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@ You are given an integer array coins representing coins of different denominatio
   
   
   <li>
-    <a href="https://twitter.com/tLLWtG1">
+    <a target="_blank" href="https://twitter.com/tLLWtG1">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -920,7 +920,7 @@ You are given an integer array coins representing coins of different denominatio
   
   
   <li>
-    <a href="https://twitter.com/tLLWtG1">
+    <a target="_blank" href="https://twitter.com/tLLWtG1">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
