--- a/page2/index.html
+++ b/page2/index.html
@@ -595,7 +595,7 @@ tLLWtG 的 Blog 开通了。
   
   
   <li>
-    <a href="https://twitter.com/tLLWtG1">
+    <a target="_blank" href="https://twitter.com/tLLWtG1">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -689,7 +689,7 @@ tLLWtG 的 Blog 开通了。
   
   
   <li>
-    <a href="https://twitter.com/tLLWtG1">
+    <a target="_blank" href="https://twitter.com/tLLWtG1">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
