--- a/about/index.html
+++ b/about/index.html
@@ -522,7 +522,7 @@
   
   
   <li>
-    <a href="https://twitter.com/tLLWtG1">
+    <a target="_blank" href="https://twitter.com/tLLWtG1">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -616,7 +616,7 @@
   
   
   <li>
-    <a href="https://twitter.com/tLLWtG1">
+    <a target="_blank" href="https://twitter.com/tLLWtG1">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
