--- a/about.html
+++ b/about.html
@@ -21,6 +21,27 @@ multilingual: true
   markdownify }}
 </div>
 
+{% if site.giscus %}
+<script
+  src="https://giscus.app/client.js"
+  data-repo="tLLWtG/tllwtg.github.io"
+  data-repo-id="R_kgDOH3yTZg"
+  data-category="Announcements"
+  data-category-id="DIC_kwDOH3yTZs4CT2g1"
+  data-mapping="title"
+  data-strict="0"
+  data-reactions-enabled="1"
+  data-emit-metadata="0"
+  data-input-position="top"
+  data-theme="light"
+  data-lang="zh-CN"
+  data-loading="lazy"
+  crossorigin="anonymous"
+  async
+></script>
+{% endif %}
+<!---->
+
 {% if site.disqus_username %}
 <!-- disqus 评论框 start -->
 <div class="comment">
