--- a/about/index.html
+++ b/about/index.html
@@ -329,6 +329,27 @@
 </div>
 
 
+<script
+  src="https://giscus.app/client.js"
+  data-repo="tLLWtG/tllwtg.github.io"
+  data-repo-id="R_kgDOH3yTZg"
+  data-category="Announcements"
+  data-category-id="DIC_kwDOH3yTZs4CT2g1"
+  data-mapping="title"
+  data-strict="0"
+  data-reactions-enabled="1"
+  data-emit-metadata="0"
+  data-input-position="top"
+  data-theme="light"
+  data-lang="zh-CN"
+  data-loading="lazy"
+  crossorigin="anonymous"
+  async
+></script>
+
+<!---->
+
+
 
     </div>
     <!-- Sidebar Container -->
