change bg of about

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "「me」"
-header-img: "img/post-bg-2022.jpg"
+header-img: "img/about.jpg"
 header-mask: 0.3
 multilingual: true
 ---
