Deploy commit 075c49ef7a94acb61d2506eb915b6eaf71937065
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/about/index.html
+++ b/about/index.html
@@ -252,7 +252,7 @@
 <style type="text/css">
     header.intro-header{
         position: relative;
-        background-image: url('/img/post-bg-2022.jpg');
+        background-image: url('/img/about.jpg');
         background: ;
     }
 
@@ -274,7 +274,7 @@
 
 <!--be random-->
 
-<header class="intro-header" style="background-image: url('/img/post-bg-2022.jpg')">
+<header class="intro-header" style="background-image: url('/img/about.jpg')">
   <div class="header-mask"></div>
  
   <div class="container">
