Deploy commit 192a7acfc3032fa60b1483cec1dc8323e1b7a9be
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/page2/index.html
+++ b/page2/index.html
@@ -630,35 +630,14 @@ tLLWtG 的 Blog 开通了。
 </section>
 
 
-      <!-- Friends Blog
-      
-<hr>
-<h5><del>单向</del>友情链接</h5>
-<ul class="list-inline">
-  
-  <li><a href="https://hexo.tllwtg.top">tLLWtG Blog, but with Hexo</a></li>
-  
-  <li><a href="https://mirror.tllwtg.top">镜像站</a></li>
-  
-  <li><a href="https://oi.wiki">OI Wiki</a></li>
-  
-  <li><a href="https://codeforces.com">Codeforces</a></li>
-  
-  <li><a href="https://www.luogu.com.cn">洛谷</a></li>
-  
-  <li><a href="https://hitokoto.cn">一言</a></li>
-  
-</ul>
- -->
+      <!-- Friends Blog -->
+      <!-- rm "%" -->
+      <!-- { include friends.html } -->
 
       <!-- Ads -->
       <!--useless?-->
-      <!--<script
-  async
-  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8547424531148298"
-  crossorigin="anonymous"
-></script>
--->
+      <!-- rm "%" -->
+      <!-- { include ads.html } -->
     </div>
     
   </div>
