--- a/links.html
+++ b/links.html
@@ -22,6 +22,7 @@ header-mask: 0.3
         {% for friend in site.friends %}
         <a
           class="friend_tag"
+          target="_blank"
           href="{{friend.href}}"
           title="{{friend.title}}"
           style="
