--- a/links.html
+++ b/links.html
@@ -26,6 +26,7 @@ header-mask: 0.3
           href="{{friend.href}}"
           title="{{friend.title}}"
           style="
+            text-align: center;
             box-sizing: border-box;
             background-color: transparent;
             color: #8f8f8f;
