Deploy commit 65de229dc917215e8fd62ce3571aa03a776e290e
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/links/index.html
+++ b/links/index.html
@@ -316,6 +316,7 @@
           href="https://hexo.tllwtg.top"
           title="tLLWtG Blog, but with Hexo"
           style="
+            text-align: center;
             box-sizing: border-box;
             background-color: transparent;
             color: #8f8f8f;
@@ -341,6 +342,7 @@
           href="https://mirror.tllwtg.top"
           title="镜像站"
           style="
+            text-align: center;
             box-sizing: border-box;
             background-color: transparent;
             color: #8f8f8f;
@@ -366,6 +368,7 @@
           href="https://oi.wiki"
           title="OI Wiki"
           style="
+            text-align: center;
             box-sizing: border-box;
             background-color: transparent;
             color: #8f8f8f;
@@ -391,6 +394,7 @@
           href="https://codeforces.com"
           title="Codeforces"
           style="
+            text-align: center;
             box-sizing: border-box;
             background-color: transparent;
             color: #8f8f8f;
@@ -416,6 +420,7 @@
           href="https://www.luogu.com.cn"
           title="洛谷"
           style="
+            text-align: center;
             box-sizing: border-box;
             background-color: transparent;
             color: #8f8f8f;
@@ -441,6 +446,7 @@
           href="https://hitokoto.cn"
           title="一言"
           style="
+            text-align: center;
             box-sizing: border-box;
             background-color: transparent;
             color: #8f8f8f;
