--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@ multilingual: true
   data-theme="light"
   data-lang="zh-CN"
   data-loading="lazy"
+  data-strict="1"
   crossorigin="anonymous"
   async
 ></script>
