--- a/links.html
+++ b/links.html
@@ -77,6 +77,7 @@ header-mask: 0.3
         data-theme="light"
         data-lang="zh-CN"
         data-loading="lazy"
+        data-strict="1"
         crossorigin="anonymous"
         async
       ></script>
