--- a/about/index.html
+++ b/about/index.html
@@ -349,6 +349,7 @@
   data-theme="light"
   data-lang="zh-CN"
   data-loading="lazy"
+  data-strict="1"
   crossorigin="anonymous"
   async
 ></script>
