--- a/links/index.html
+++ b/links/index.html
@@ -497,6 +497,7 @@
         data-theme="light"
         data-lang="zh-CN"
         data-loading="lazy"
+        data-strict="1"
         crossorigin="anonymous"
         async
       ></script>
