add notices according to License

--- a/about.html
+++ b/about.html
@@ -7,6 +7,12 @@ header-mask: 0.3
 multilingual: true
 ---
 
+<!--
+  add giscus
+
+  Modified by tLLWtG
+-->
+
 {% include multilingual-sel.html %}
 
 <!-- Chinese Version -->
