--- a/links.html
+++ b/links.html
@@ -6,6 +6,10 @@ header-img: "img/links.jpg"
 header-mask: 0.3
 ---
 
+<!--
+  Created by tLLWtG
+-->
+
 <!-- Page Header -->
 {% include intro-header.html type='page' %}
 
