--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--
+  add:
+  Google tag (gtag.js)
+  google adsense
+  baidu tongji
+  baidu sousuoziyuanpingtai
+
+  Modified by tLLWtG
+-->
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -252,6 +262,13 @@
 </div>
 
     <!-- Page Header -->
+<!--
+    add header-mask
+    set random background
+
+    Modified by tLLWtG
+-->
+
 
 
 
@@ -298,12 +315,26 @@
 
 
     <!-- Footer -->
+
+<!--
+    add busuanzi
+    update copyright
+
+    Modified by tLLWtG
+-->
+
 <footer>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <!-- SNS Link -->
-                
+                <!--
+  create a new tab for twitter 
+
+  Modified by tLLWtG
+-->
+
+
 
 
 <ul class="list-inline text-center">
