Deploy commit d71c147796d7a343ad14535abe5dbbfbee7f233b
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <!--
+  change some name to match package.json
   add:
   Google tag (gtag.js)
   google adsense
@@ -95,7 +96,7 @@
   <link rel="stylesheet" href=" /css/bootstrap.min.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href=" /css/hux-blog.min.css">
+  <link rel="stylesheet" href=" /css/tllwtg-blog.min.css">
 
   <!-- Custom Fonts -->
   <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
@@ -650,6 +651,7 @@
     <!-- Footer -->
 
 <!--
+    change some name to match package.json
     add busuanzi
     update copyright
 
@@ -755,7 +757,7 @@
 <script src=" /js/bootstrap.min.js "></script>
 
 <!-- Custom Theme JavaScript -->
-<script src=" /js/hux-blog.min.js "></script>
+<script src=" /js/tllwtg-blog.min.js "></script>
 
 <!-- Simple Jekyll Search -->
 <script src=" /js/simple-jekyll-search.min.js"></script>
