Deploy commit dc40ae6c0b2a7fdcc6cfa653a865e713aa3407ab
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
   严格弱序是个大坑 : (
 
 
-我一直想总结一下 STL 中众多内含比较关系的函数和容器所用到的 Strict Weak Ordering 原则，即严格弱序。正好今天刷到 luogu 的 P2123 皇后游戏，于是就顺手整理了相关内容。
+一直想总结一下 STL 中众多内含比较关系的函数和容器所用到的 Strict Weak Ordering 原则，即严格弱序。正好今天刷到 luogu 的 P2123 皇后游戏，于是就顺手整理了相关内容。
 
 定义
 
-我们知道，STL 的任何一种内含比较关系的函数(sort, upper_bound…) 、容器(set, priority_queue…)都需...
+我们知道，STL 的任何一种内含比较关系的函数(sort, upper_bound…) 、容器(set, priority_queue…)都需要...
             
         </div>
     </a>
