--- a/about/index.html
+++ b/about/index.html
@@ -354,9 +354,9 @@
 
 <!-- Chinese Version -->
 <div class="zh post-container">
-   <p>Hi，我是 tLLWtG，一个略懂计算机科学的新手，现为<del>翔安大学</del>厦门大学 大一学生。</p>
+   <p>Hi，我是 tLLWtG，一个略懂计算机科学的新手，现为 <del>翔安大学</del>厦门大学 大一学生。</p>
 
-<p>目前的物理活动范围主要在厦门，也想当个数字游<del>民</del>侠。虚拟分身日常出没于<a href="https://space.bilibili.com/353981156">B站</a>、<a href="https://twitter.com/tLLWtG1/">推特</a>、<a href="https://github.com/tLLWtG">Github</a> 等。</p>
+<p>目前的物理活动范围主要在厦门，也想当个数字游<del>民</del>侠，虚拟分身日常出没于<a href="https://space.bilibili.com/353981156">B站</a>、<a href="https://twitter.com/tLLWtG1/">推特</a>、<a href="https://www.zhihu.com/people/tllwtg">知乎</a>、<a href="https://github.com/tLLWtG">GitHub</a> 等。</p>
 
 
 </div>
@@ -365,7 +365,7 @@
 <div class="en post-container">
    <p>Hey, I’m tllwtg, a greenhand who knows a bit about computer science. And recently, I became a freshman at <del>Xiangan University</del> XMU (Xiamen University).</p>
 
-<p>At present, my physical activity scope is mainly in Xiamen, and on Internet I’m also haunting in <a href="https://space.bilibili.com/353981156">bilibili</a>、<a href="https://twitter.com/tLLWtG1/">Twitter</a>、<a href="https://github.com/tLLWtG">Github</a> etc with a virtual avatar.</p>
+<p>At present, my physical activity scope is mainly in Xiamen, and on Internet I’m also haunting in <a href="https://space.bilibili.com/353981156">Bilibili</a>、<a href="https://twitter.com/tLLWtG1/">Twitter</a>、<a href="https://www.zhihu.com/people/tllwtg">Zhihu</a>、<a href="https://github.com/tLLWtG">GitHub</a> etc with a virtual avatar.</p>
 
 </div>
 
