--- a/about.html
+++ b/about.html
@@ -16,14 +16,14 @@ multilingual: true
 {% include multilingual-sel.html %}
 
 <!-- Chinese Version -->
-<div class="zh post-container">
-  {% capture about_zh %}{% include about/zh.md %}{% endcapture %} {{ about_zh |
+<div class="en post-container">
+  {% capture about_en %}{% include about/zh.md %}{% endcapture %} {{ about_en |
   markdownify }}
 </div>
 
 <!-- English Version -->
-<div class="en post-container">
-  {% capture about_en %}{% include about/en.md %}{% endcapture %} {{ about_en |
+<div class="zh post-container">
+  {% capture about_zh %}{% include about/en.md %}{% endcapture %} {{ about_zh |
   markdownify }}
 </div>
 
