Deploy commit c5543bd44fd730a1700757c45dd693ee2528ed8a
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/about/index.html
+++ b/about/index.html
@@ -346,26 +346,56 @@
 
                 <!-- Language Selector -->
                 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-                    <option value="0" selected> 中文 | Chinese </option>
-                    <option value="1"> 英文 | English </option>
+                    <option value="0" selected> 英文 | English </option>
+                    <option value="1"> 中文 | Chinese </option>
                 </select>
 
 
 
 <!-- Chinese Version -->
-<div class="zh post-container">
-   <p>Hi，我是 tLLWtG，一个略懂计算机科学的新手，现为 <del>翔安大学</del>厦门大学 大一学生。</p>
+<div class="en post-container">
+   <p>Hi，这里是 tLLWtG Blog ღゝ◡╹)ノ♡!</p>
 
-<p>目前的物理活动范围主要在厦门，也想当个数字游<del>民</del>侠，虚拟分身日常出没于<a href="https://space.bilibili.com/353981156">B站</a>、<a href="https://twitter.com/tLLWtG1/">推特</a>、<a href="https://www.zhihu.com/people/tllwtg">知乎</a>、<a href="https://github.com/tLLWtG">GitHub</a> 等。</p>
-
+<blockquote>
+  <p>中文 About 还在施工中…</p>
+</blockquote>
 
 </div>
 
 <!-- English Version -->
-<div class="en post-container">
-   <p>Hey, I’m tllwtg, a greenhand who knows a bit about computer science. And recently, I became a freshman at <del>Xiangan University</del> XMU (Xiamen University).</p>
+<div class="zh post-container">
+   <p>Welcome to my blog ღゝ◡╹)ノ♡!</p>
 
-<p>At present, my physical activity scope is mainly in Xiamen, and on Internet I’m also haunting in <a href="https://space.bilibili.com/353981156">Bilibili</a>、<a href="https://twitter.com/tLLWtG1/">Twitter</a>、<a href="https://www.zhihu.com/people/tllwtg">Zhihu</a>、<a href="https://github.com/tLLWtG">GitHub</a> etc with a virtual avatar.</p>
+<h3 id="tllwtg">tLLWtG</h3>
+
+<hr />
+
+<p>I’m Zhiliu Liu, or you might know me as tLLWtG. I am currently a student majoring in CS in XMU (Xiamen University). You may be interested in some of my <a href="https://github.com/tLLWtG">projects</a> or <a href="https://tllwtg.top/archive">blogs</a>. Or if you are just genuinely curious about who I am, look below to learn more about me.</p>
+
+<h3 id="passions">Passions</h3>
+
+<hr />
+
+<p>I am a competitive programmer who attends contests like CodeForces, AtCoder (preparing for CCPC and ICPC). Here are my CP accounts:</p>
+<ul>
+  <li><a href="https://codeforces.com/profile/tllwtg">tllwtg</a> (CF)</li>
+  <li><a href="https://codeforces.com/profile/tllwtgV1.5">tllwtgV1.5</a> (CF)</li>
+  <li><a href="https://atcoder.jp/users/tllwtg">tllwtg</a> (ATC)</li>
+</ul>
+
+<p>I also occassionally take part in some open source projects on GitHub.</p>
+
+<h3 id="social-media">Social Media</h3>
+
+<hr />
+
+<p>At present, my physical activity scope is mainly in Xiamen, and on Internet I’m also haunting in <a href="https://space.bilibili.com/353981156">bilibili</a>, <a href="https://www.zhihu.com/people/tllwtg">Zhihu</a>, <a href="https://github.com/tLLWtG">GitHub</a>, <a href="https://twitter.com/tLLWtG1/">Twitter</a> etc with a virtual avatar.</p>
+
+<h3 id="contact">Contact</h3>
+
+<hr />
+
+<p>Email: <a href="tllwtg@gmail.com">tllwtg@gmail.com</a></p>
 
 </div>
 
