Deploy commit 6e943b14c81a1a514433340a27df2a6926288742
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/about/index.html
+++ b/about/index.html
@@ -357,7 +357,7 @@
    <p>Hi，这里是 tLLWtG Blog ღゝ◡╹)ノ♡!</p>
 
 <blockquote>
-  <p>中文 About 还在施工中…</p>
+  <p>中文 About 正在施工中…</p>
 </blockquote>
 
 </div>
