Deploy commit ae741d09afdc7eb58c1224106ab05c435bfa181f
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/about/index.html
+++ b/about/index.html
@@ -395,7 +395,7 @@
 
 <hr />
 
-<p>Email: <a href="tllwtg@gmail.com">tllwtg@gmail.com</a></p>
+<p>Email: <a href="mailto:tllwtg@gmail.com">tllwtg@gmail.com</a></p>
 
 </div>
 
