Deploy commit f979268431c84bfeb3938a69b5524f0b2e9aa0b0
Autodeployed using __tLLWtG_action-build-deploy-ghpages in Jekyll Deploy

--- a/index.html
+++ b/index.html
@@ -366,6 +366,8 @@
 
 111 上大分了。
 
+
+
 CF1922A Tricky Template
 
 只要存在一个位置，使得 c 和 a, b 均不同就能构造出答案。
@@ -391,7 +393,7 @@ void solve()
     int n;
     cin &gt;&gt; n;
     string a, b, c;
-    cin &...
+    cin...
             
         </div>
     </a>
